# Alpha-Renderer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Assets/Scene/: Scene.json
Assets/Scene/materials/: Material_13e1d11d-293b-4ae9-90b0-a1ac3b0af3e8.json  Material_47df98d2-3111-4570-a3c9-faf8dbe98bd4.json  Material_91f0ccc9-0d87-497c-985a-d7f3876eec16.json  Material_cec13c4c-61f0-4224-a411-5740583ae52a.json  Material_d65c42c9-b7ab-405a-b4df-3256448a8f77.json
Assets/Scene/meshes/: Cube_0fddae11-53cc-4449-9567-08431abf328b.json  Sphere_63fae732-5757-4e03-8194-3205dacef2f5.json  Suzanne_1efc555b-3353-441b-a6bc-6df60a891e5e.json
shaders/: color_correction.frag  composition.frag  direct_light.frag  direct_light.vert  fullscreen.vert  geometry.frag  geometry.vert  rc_build_cascade.comp  rc_depth_copy.comp  rc_depth_downsample.comp  rc_merge.comp  rc_resolve_indirect.comp  shadowmap.frag  shadowmap.vert  skybox.frag  skybox.vert  smaa_blend.frag  smaa_edge.frag  smaa_weight.frag  transparency.frag  transparency.vert
src/: core.hpp  main.cpp
src/ECS/: README.md  chunk.hpp  chunk.inl  component_storage.hpp  component_storage.inl  components.hpp  ecs.cpp  ecs.hpp  ecs.inl  ecs_types.hpp
src/Engine/: alpha_engine.cpp  alpha_engine.hpp
src/Math/: AABB.cpp  AABB.hpp  octree.hpp  octree.inl  view_frustum.cpp  view_frustum.hpp
src/Rendering/: README.md  renderer.cpp  renderer.hpp  rendering_constants.hpp  utils.hpp
src/Rendering/Core/: buffer.cpp  buffer.hpp  compute_pipeline.cpp  compute_pipeline.hpp  descriptors.cpp  descriptors.hpp  device.cpp  device.hpp  frame_context.hpp  imgui_manager.cpp  imgui_manager.hpp  pipeline.cpp  pipeline.hpp  swapchain.cpp  swapchain.hpp  window.cpp  window.hpp
src/Rendering/RenderPasses/: render_passes_buffers.hpp
src/Rendering/RenderPasses/Color Correction/: color_correction_pass.cpp  color_correction_pass.hpp
src/Rendering/RenderPasses/Composition/: composition_pass.cpp  composition_pass.hpp
src/Rendering/RenderPasses/Direct Lighting/: README.md  light_pass.cpp  light_pass.hpp
src/Rendering/RenderPasses/General/: skybox_pass.cpp  skybox_pass.hpp
src/Rendering/RenderPasses/Geometry/: README.md  geometry_pass.cpp  geometry_pass.hpp
src/Rendering/RenderPasses/Radiance Cascades/: README.md  rc_gi_pass.cpp  rc_gi_pass.hpp
src/Rendering/RenderPasses/SMAA/: smaa_blend_pass.cpp  smaa_blend_pass.hpp  smaa_edge_pass.cpp  smaa_edge_pass.hpp  smaa_weight_pass.cpp  smaa_weight_pass.hpp
src/Rendering/RenderPasses/Shadowmapping/: README.md  shadow_map.cpp  shadow_map.hpp  shadow_pass.cpp  shadow_pass.hpp
src/Rendering/RenderPasses/Transparency/: README.md  transparency_pass.cpp  transparency_pass.hpp
src/Rendering/Resources/: gbuffer.cpp  gbuffer.hpp  material.cpp  material.hpp  mesh.cpp  mesh.hpp  rendering_resources.cpp  rendering_resources.hpp  texture.cpp  texture.hpp
src/Resources/: deserialized_scene.cpp  deserialized_scene.hpp  resource_manager.cpp  resource_manager.hpp  scene_loader.cpp  scene_loader.hpp
src/Scene/: enviroment_lighting.hpp  scene.cpp  scene.hpp
src/Systems/: bounding_box_system.cpp  bounding_box_system.hpp  camera_culling.cpp  camera_culling.hpp  camera_system.cpp  camera_system.hpp  keyboard_movement_system.cpp  keyboard_movement_system.hpp  light_system.cpp  light_system.hpp  transform_system.cpp  transform_system.hpp
